--- a/index.html
+++ b/index.html
@@ -11,7 +11,40 @@
 
 </head>
 
-<body>
-    <h1>Busra Aktas</h1>
+<body style="background-color:rgb(86, 121, 235);">    
+
+    <table width="100%" border="0" cellpadding="10">
+        <tr>
+           <td colspan="2" bgcolor="#000000">
+           <font color="#FFFFFF"><h1>Busra Aktas</h1></font></td>
+        </tr>
+       <tr valign="top">
+         <td bgcolor="#eeeeee" width="20%">
+           <b>FOTO'S</b><p>
+           VOETBAL<br>
+           <img src="http://www.mijn-eigen-website.nl/images/molen.jpg" alt="hollandse molen" style="width: 175px; height: auto; max-width: 25%; float: left; padding: 4px; border: 1px solid grey; margin: 4px 0 4px 4px;">
+           KUNST<br>
+           <img src="http://www.mijn-eigen-website.nl/images/molen.jpg" alt="hollandse molen" style="width: 175px; height: auto; max-width: 25%; float: left; padding: 4px; border: 1px solid grey; margin: 4px 0 4px 4px;">
+           SCHOOL<br>
+           <img src="http://www.mijn-eigen-website.nl/images/molen.jpg" alt="hollandse molen" style="width: 175px; height: auto; max-width: 25%; float: left; padding: 4px; border: 1px solid grey; margin: 4px 0 4px 4px;">
+
+         </td>
+         <td bgcolor="#ffffff" width="80%" height="200">
+           <b>LES: 1</b>
+           <p>Online HTML leren met behulp van live voorbeelden.</p>
+         </td>
+         
+       </tr>
+       
+       <tr>
+         <td colspan="2" bgcolor="#000000">
+           <font color="#ffffff">
+           <center>Copyright © <i>CMDLAB-Creatieve Technologien</i></center>
+           </font>
+         </td>
+       </tr>
+     </table>
+
+
 </body>
 </html>
