--- a/index.html
+++ b/index.html
@@ -7,43 +7,67 @@
   <title>CU2 - Busra</title>
   <meta name="description" content="CU2 - Busra">
   <meta name="author" content="Busra">
+  <link rel="stylesheet" href="styles.css"/>
 
 
 </head>
 
-<body style="background-color:rgb(86, 121, 235);">    
+<body>
 
-    <table width="100%" border="0" cellpadding="10">
-        <tr>
-           <td colspan="2" bgcolor="#000000">
-           <font color="#FFFFFF"><h1>Busra Aktas</h1></font></td>
-        </tr>
-       <tr valign="top">
-         <td bgcolor="#eeeeee" width="20%">
-           <b>FOTO'S</b><p>
-           VOETBAL<br>
-           <img src="http://www.mijn-eigen-website.nl/images/molen.jpg" alt="hollandse molen" style="width: 175px; height: auto; max-width: 25%; float: left; padding: 4px; border: 1px solid grey; margin: 4px 0 4px 4px;">
-           KUNST<br>
-           <img src="http://www.mijn-eigen-website.nl/images/molen.jpg" alt="hollandse molen" style="width: 175px; height: auto; max-width: 25%; float: left; padding: 4px; border: 1px solid grey; margin: 4px 0 4px 4px;">
-           SCHOOL<br>
-           <img src="http://www.mijn-eigen-website.nl/images/molen.jpg" alt="hollandse molen" style="width: 175px; height: auto; max-width: 25%; float: left; padding: 4px; border: 1px solid grey; margin: 4px 0 4px 4px;">
+<div id="left" ALIGN="center">
+  <img ALIGN="left" width="100%" src="cu2.png">
+  <p>..<br></p>
+  <img ALIGN="center" width="90%" src="mario gif.gif">
+  <p>..<br></p>
+  <img ALIGN="center" width="50%" src="advertentie gif.gif">
+  <p>..<br></p>
+  <img ALIGN="center" src="gsmweb klein banner.jpg">
+  <p>..<br></p>
+  <p>..<br></p>
+</div>
 
-         </td>
-         <td bgcolor="#ffffff" width="80%" height="200">
-           <b>LES: 1</b>
-           <p>Online HTML leren met behulp van live voorbeelden.</p>
-         </td>
-         
-       </tr>
-       
-       <tr>
-         <td colspan="2" bgcolor="#000000">
-           <font color="#ffffff">
-           <center>Copyright © <i>CMDLAB-Creatieve Technologien</i></center>
-           </font>
-         </td>
-       </tr>
-     </table>
+<div id="center" ALIGN="center">
+<ul><img src="welkom bij de groep gif.gif"></ul>
+
+<p>
+  <h1>Dit <br>wordt mijn nieuwe <br> OLIFANT</h1><br>
+  <img src="olifant gif.gif" width="90%">
+  <br>
+  <br>
+  <br>
+  <h2>In opdracht van school heb ik mijn eigen CU2 pagina gemaakt. <br>
+    Hiervoor heb ik 200$ gekregen. Echt dope hé..</h2>
+   <br>
+   <br>
+   <br>
+<img src="congrats gif.gif" width="60%">
+<br>
+<br>
+<br>
+<img src="tom and jerry gif.gif" width="90%">
+<br>
+<h1>Joke ofcourse!!</h1>
+
+</p>
+</div>
+
+<div id="right" ALIGN="center">
+    <img ALIGN="right" width="100%" src="cu2.png">
+    <p>..<br></p>
+    <img ALIGN="center" src="black friday ad gif.gif">
+    <p>..<br></p>
+    <img ALIGN="center" src="order us gif.gif">
+    <p>..<br></p>
+    <img ALIGN="center" src="panda gif.gif">
+    <p>..<br></p>
+    <p>..<br></p>
+</div>
+
+<div id="footer" ALIGN="center">
+  <h6>Copyright@ Busra Aktas  -  CU2-website  -  Creatieve Technologiën</h6>
+</div>
+
+
 
 
 </body>
