--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
 <body>
 
 <div id="left" ALIGN="center">
-  <img ALIGN="left" width="100%" src="cu2.png">
+  <img ALIGN="left" width="100%" src="img/cu2.png">
   <p>..<br></p>
-  <img ALIGN="center" width="90%" src="mario gif.gif">
+  <img ALIGN="center" width="90%" src="img/mario.gif">
   <p>..<br></p>
-  <img ALIGN="center" width="50%" src="advertentie gif.gif">
+  <img ALIGN="center" width="50%" src="img/advertentie.gif">
   <p>..<br></p>
-  <img ALIGN="center" src="gsmweb klein banner.jpg">
+  <img ALIGN="center" src="img/gsmweb-klein-banner.jpg">
   <p>..<br></p>
   <p>..<br></p>
 </div>
 
 <div id="center" ALIGN="center">
-<ul><img src="welkom bij de groep gif.gif"></ul>
-
+<ul><img src="img/welkom-bij-de-groep.gif"></ul>
+<hr />
 <p>
   <h1>Dit <br>wordt mijn nieuwe <br> OLIFANT</h1><br>
-  <img src="olifant gif.gif" width="90%">
+  <img src="img/olifant.gif" width="90%">
   <br>
+  <hr />
   <br>
   <br>
   <h2>In opdracht van school heb ik mijn eigen CU2 pagina gemaakt. <br>
@@ -40,11 +41,12 @@
    <br>
    <br>
    <br>
-<img src="congrats gif.gif" width="60%">
+<img src="img/congrats.gif" width="60%">
+<br>
+<hr />
 <br>
 <br>
-<br>
-<img src="tom and jerry gif.gif" width="90%">
+<img src="img/tom-and-jerry.gif" width="90%">
 <br>
 <h1>Joke ofcourse!!</h1>
 
@@ -52,15 +54,16 @@
 </div>
 
 <div id="right" ALIGN="center">
-    <img ALIGN="right" width="100%" src="cu2.png">
+    <img ALIGN="right" width="100%" src="img/cu2.png">
     <p>..<br></p>
-    <img ALIGN="center" src="black friday ad gif.gif">
+    <img ALIGN="center" src="img/black-friday-ad.gif">
     <p>..<br></p>
-    <img ALIGN="center" src="order us gif.gif">
+    <img ALIGN="center" src="img/order-us.gif">
     <p>..<br></p>
-    <img ALIGN="center" src="panda gif.gif">
+    <img ALIGN="center" src="img/panda.gif">
     <p>..<br></p>
     <p>..<br></p>
+    
 </div>
 
 <div id="footer" ALIGN="center">
